# eightfold_ai

./: .gitignore  README.md  pyproject.toml
design/: DEMO_SCRIPT.md  DESIGN.md  make_design_pdf.py
diagrams/: architecture.excalidraw  canonical_projection_wall.excalidraw  identity_edge_case.excalidraw  make_diagrams.py  merge_confidence_sequence.excalidraw
samples/: make_sample_docs.py
samples/configs/: custom_min_pii.json  custom_recruiter_summary.json  default.json
samples/inputs/jane-mcdonald/: ats.json  github.json  notes.txt  recruiter.csv
samples/inputs/liang-wei/: ats.json  github.json  notes.txt
samples/inputs/marco-rossi/: ats.json  notes.txt  resume.docx
samples/outputs/: custom_min_pii.json  custom_recruiter_summary.json  default.json
src/transformer/: __init__.py  __main__.py  cli.py  confidence.py  config.py  merge.py  models.py  normalize_stage.py  pipeline.py  reporting.py  skills_dictionary.py
src/transformer/normalize/: __init__.py  dates.py  emails.py  location.py  names.py  phones.py  skills.py
src/transformer/projection/: __init__.py  path_resolver.py  projector.py  validator.py
src/transformer/sources/: __init__.py  ats_json.py  base.py  github.py  recruiter_csv.py  recruiter_notes.py  resume.py
tests/: conftest.py  test_ats_remap.py  test_confidence.py  test_gold_oracle.py  test_gold_profile.py  test_identity_chain.py  test_merge.py  test_normalize.py  test_pipeline_e2e.py  test_projection.py  test_resume_adversarial.py  test_resume_scope.py  test_robustness.py
tests/fixtures/: gold_jane.json
