[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer — messy inputs to one trustworthy canonical profile."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "phonenumbers>=8.13",
    "pycountry>=23.12",
    "jsonschema>=4.20",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "requests>=2.31",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "reportlab>=4.0",
]

[project.scripts]
candidate-transformer = "transformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
